--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Contact me
-subtitle: Questions, Consulting, Collaborating
+subtitle: -
 ---
 
 <form action="https://formspree.io/oliverslcarr@gmail.com"
